--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
+    "@sanity/image-url": "^1.1.0",
+    "@types/react-helmet": "^6.1.11",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-source-sanity": "^7.9.1",
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/node": "^22.14.1",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "gatsby-plugin-typescript": "^5.14.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.8.3"
   },
   "keywords": [
     "gatsby"
