--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "gatsby-plugin-typescript": "^5.14.0",
+    "netlify-plugin-apt": "^1.0.0",
     "prettier": "^2.8.8",
     "typescript": "^5.8.3"
   },
