feat: update dependencies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/image-url": "^1.1.0",
     "@types/react-helmet": "^6.1.11",
-    "gatsby": "^5.14.1",
+    "gatsby": "^5.14.4",
+    "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
@@ -18,19 +19,19 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-source-sanity": "^7.9.1",
     "gatsby-transformer-sharp": "^5.14.0",
-    "postcss": "^8.5.3",
-    "postcss-preset-env": "^10.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss": "^8.5.4",
+    "postcss-preset-env": "^10.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.30",
     "@types/prop-types": "^15.7.14",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "gatsby-plugin-typescript": "^5.14.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   },
   "keywords": [
